<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/parent_play_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/root_padding"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_rules"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_rules"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/game_rules_size"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/parent_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="60dp"
            android:paddingEnd="60dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/digit1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/d1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/digit2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/d2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/digit3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/d3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/digit4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/d4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:cursorVisible="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_start_new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_new_game"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonStartNewGame"/>

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_forget"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonForget"/>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>